--- a/src/styles/loginWith.css
+++ b/src/styles/loginWith.css
@@ -2,21 +2,45 @@
   width: 80%;
   margin-left: 10%;
   margin-top: 7%;
+  padding: 5%;
+  border-radius: 15px;
+  background-color: white;
 }
 
+.mystyle {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+body {
+  background-color: #e5e5e5 !important;
+}
+@media screen and (max-width: 600px) {
+  body {
+    background-image: url(../assets/loginIMG.jpeg);
+  }
+  .loginDiv {
+    margin-left: 20%;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 5%;
+    border-radius: 15px;
+    width: 100%;
+  }
+}
 .headings {
   font-weight: 600 !important;
   font-style: normal !important;
-  font-size: 40px !important;
-  line-height: 60px !important;
+  font-size: 250% !important;
+  line-height: 150% !important;
   display: flex !important;
   fill: #000000;
 }
 .email {
   font-weight: 400 !important;
   font-style: normal !important;
-  font-size: 25px !important;
-  line-height: 37.5px !important;
+  font-size: 150% !important;
+  line-height: 150% !important;
   display: flex !important;
   color: #06a561;
   margin-top: 5% !important;
@@ -35,9 +59,9 @@
   font-style: normal;
   font-size: 15px;
   line-height: 22px;
-  color: #ffffff;
+  color: #ffffff !important;
   text-transform: none !important;
-  text-decoration: none;
+  text-decoration: none !important;
   height: 23px;
 }
 
@@ -48,7 +72,6 @@
   font-size: 15px;
   line-height: 22px;
   color: #ffffff;
-
   float: right;
   width: 35% !important;
   margin-top: 10% !important;
