--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -3,3 +3,8 @@
   max-width: 1440px;
   height: 101px;
 }
+@media screen and (max-width: 400px) {
+  .navBar {
+    height: 51px !important;
+  }
+}
