--- a/src/styles/loginWith.css
+++ b/src/styles/loginWith.css
@@ -21,11 +21,15 @@ body {
     background-image: url(../assets/loginIMG.jpeg);
   }
   .loginDiv {
-    margin-left: 20%;
+    margin: 13.5%;
+    margin-top: 10%;
     background-color: rgba(255, 255, 255, 0.9);
-    padding: 5%;
+    padding: 15%;
     border-radius: 15px;
-    width: 100%;
+    width: 125%;
+  }
+  .navBar {
+    height: 75px !important;
   }
 }
 .headings {
