--- a/src/styles/loginWith.css
+++ b/src/styles/loginWith.css
@@ -52,11 +52,28 @@ body {
 .size-150 {
   font-size: 150% !important;
 }
-.styledForm {
+.styledInput {
+  font-size: 1rem;
+  font-family: "Poppins";
+  font-weight: 400;
+  line-height: 1.4375em;
+  border: 1px solid #e5e8ec;
+  width: 100%;
   height: 40px;
   background-color: #e5e5e5;
   border-radius: 20px;
   box-shadow: inset 1px 1px 20px rgba(0, 0, 0, 0.25);
+  transition: width 300ms ease;
+  padding: 6px 10px;
+}
+.styledInput:hover {
+  background: #eaeef3;
+  border-color: #e5e8ec;
+}
+.styledInput:focus {
+  outline: none;
+  /* // width: 220px; */
+  transition: width 200ms ease-out;
 }
 .width-80 {
   width: 80%;
