--- a/src/styles/loginWith.css
+++ b/src/styles/loginWith.css
@@ -63,22 +63,20 @@ body {
   font-family: "Poppins";
   font-weight: 400;
   line-height: 1.4375em;
-  border: 1px solid #e5e8ec;
+  border-radius:5px;
+  border: 1px solid #909492!important;
   width: 100%;
-  height: 40px;
-  background-color: #e5e5e5;
-  border-radius: 20px;
-  box-shadow: inset 1px 1px 20px rgba(0, 0, 0, 0.25);
-  transition: width 300ms ease;
   padding: 6px 10px;
 }
 .styledInput:hover {
-  background: #eaeef3;
-  border-color: #e5e8ec;
+  border: 1px solid #06A561!important;
+  
 }
 .styledInput:focus {
-  outline: none;
-  /* // width: 220px; */
+  border: 1px solid #06A561!important;
+  outline: none!important;
+  background-color:rgba(6, 165, 97, 0.1);
+
   transition: width 200ms ease-out;
 }
 .width-80 {
@@ -87,9 +85,10 @@ body {
 .styledRegister {
   font-weight: normal;
   font-style: normal;
-  font-size: 15px;
+  font-size: 17px;
   line-height: 22px;
-  color: #ffffff !important;
+  margin-top: 25%;;
+  color: #06a561 !important;
   text-transform: none !important;
   text-decoration: none !important;
   height: 23px;
@@ -134,4 +133,9 @@ body {
   color: #ffffff;
   background-color: #06a561 !important;
   border-radius: 20px !important;
+}
+.flexRegister{
+  justify-content: center!important;
+    display: flex;
+    align-items: flex-end;
 }
