--- a/src/styles/loginWith.css
+++ b/src/styles/loginWith.css
@@ -63,20 +63,22 @@ body {
   font-family: "Poppins";
   font-weight: 400;
   line-height: 1.4375em;
-  border-radius:5px;
-  border: 1px solid #909492!important;
+  border: 1px solid #e5e8ec;
   width: 100%;
+  height: 40px;
+  background-color: #e5e5e5;
+  border-radius: 20px;
+  box-shadow: inset 1px 1px 20px rgba(0, 0, 0, 0.25);
+  transition: width 300ms ease;
   padding: 6px 10px;
 }
 .styledInput:hover {
-  border: 1px solid #06A561!important;
-  
+  background: #eaeef3;
+  border-color: #e5e8ec;
 }
 .styledInput:focus {
-  border: 1px solid #06A561!important;
-  outline: none!important;
-  background-color:rgba(6, 165, 97, 0.1);
-
+  outline: none;
+  /* // width: 220px; */
   transition: width 200ms ease-out;
 }
 .width-80 {
@@ -85,10 +87,9 @@ body {
 .styledRegister {
   font-weight: normal;
   font-style: normal;
-  font-size: 17px;
+  font-size: 15px;
   line-height: 22px;
-  margin-top: 25%;;
-  color: #06a561 !important;
+  color: #ffffff !important;
   text-transform: none !important;
   text-decoration: none !important;
   height: 23px;
@@ -133,9 +134,4 @@ body {
   color: #ffffff;
   background-color: #06a561 !important;
   border-radius: 20px !important;
-}
-.flexRegister{
-  justify-content: center!important;
-    display: flex;
-    align-items: flex-end;
 }
